--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,8 @@
-.task-title {
-    text-decoration:underline;
-    font-weight: bold;
-}
-.assignee {
-    font-style: italic;
+body{
+    padding:0;
+    margin:0;
 }
 
-.priority-high {
-    background-color: red;
-}
-.priority-medium {
-    background-color: yellow;
-}
-.priority-low {
-    background-color: green;
+.my-bg-pastellightblue {
+    background-color: #C8D9F0;
 }
